--- a/test/snippets/public/index.html
+++ b/test/snippets/public/index.html
@@ -27,6 +27,7 @@
       globalThis.runTest = async (name) => {
         var Namespace = await import(name);
         var testFunction = Namespace.test;
+        var setupFunction = Namespace.setup;
 
         if (
           !("test" in Namespace) &&
@@ -47,6 +48,11 @@
               Namespace
             ).join(", ")} `
           );
+        }
+
+        if (setupFunction && typeof setupFunction === "function") {
+          // optional setup function for dom elements
+          await setupFunction();
         }
 
         if (globalThis.BUN_DEBUG_MODE) {
